# fastapi_users

./: .env.local  .env.test  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose-local.yml  prometheus.yml  pyproject.toml  requirements.txt
app/: config.py  database.py  exceptions.py  log.py  main.py  security.py  server.py
app/api/: dependencies.py
app/api/routes/: auth.py  macros.py  payment.py  user.py
app/dao/: base.py  user.py
app/models/: user.py
app/schemas/: auth.py  macros.py  user.py
app/tasks/: celery_app.py  email_template.py  tasks.py
app/tests/: conftest.py
app/tests/integration/dao/: test_user_dao.py
app/tests/integration/routes/: test_auth_routes.py  test_macros_routes.py  test_user_routes.py
app/tests/unit/: conftest.py  test_config.py  test_db.py  test_dependencies.py  test_security.py
migrations/: env.py
migrations/versions/: 0519370b936d_plz.py  576dcc99bbe1_user_model_weight_update.py  7d522ad9dd4c_subscribed.py  9dfcd76d493a_user_full_name_nullable.py
